tests/type-check/bad/obj-update-incorrect-type.arr

data Foo:
  | foo(ref a :: Number)
end

a = foo(5)
a!{a : "hello"}
